test/constBlockConsuming5.slq
// args: --run

def foo(x:ğ”¹)mfree{
	y:=H(x);
	z:=dup(y); // error
	if z{
		forget(z); // error
		return y;
	}else{
		forget(y=0);
		return 1;
	}
}

def main()â‡’foo(0);
